fix overflow scroll

--- a/src/Body.css
+++ b/src/Body.css
@@ -4,7 +4,7 @@
     height: 100vh;
     color: white;
     padding: 30px;
-    overflow: scroll;
+    overflow-y: overlay;
     margin-bottom: 1em;
 }
 
