--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -7,7 +7,7 @@
     min-width: 230px;
     padding-left: 10px;
     padding-right: 10px;
-    overflow: scroll;
+    overflow-y: overlay;
 }
 
 .sidebar_image{
